--- a/.github/workflows/build_gpt.yml
+++ b/.github/workflows/build_gpt.yml
@@ -1,4 +1,4 @@
-name: build GPT ARM64
+name: build GPT
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Build
+    name: Build ${{ steps.get_release.outputs.version }}
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id || !github.event.sender.id
 
@@ -20,7 +20,7 @@ jobs:
         uses: actions/github-script@v6
         with:
           script: |
-            // 获取所有 release，并筛选 tag_name 包含 "arm64" 的第一个（最新版本）
+            // 获取所有 release，并筛选 tag_name 包含 "arm64" 的最新版本
             const releases = await github.rest.repos.listReleases({
               owner: "elseif",
               repo: "MikroTikPatch"
@@ -30,7 +30,8 @@ jobs:
               core.setFailed("No ARM64 release found");
             }
             core.info(`Latest ARM64 release: ${latestArm64.tag_name}`);
-            return { version: latestArm64.tag_name };
+            // 显式设置输出变量
+            core.setOutput("version", latestArm64.tag_name);
 
       - name: Check server configuration
         run: |
@@ -52,13 +53,17 @@ jobs:
           sudo apt -y install curl qemu-utils rsync unzip zip
           sudo timedatectl set-timezone "Asia/Shanghai"
 
+      - name: Network Check
+        run: |
+          echo "Checking network connectivity..."
+          ping -c 4 github.com
+
       - name: Load nbd module
         run: sudo modprobe nbd
 
       - name: Download
         run: |
           echo "Downloading version ${{ steps.get_release.outputs.version }}"
-          # 使用正确的 GitHub Release 下载链接格式
           curl -skL --retry 3 --connect-timeout 3 \
             -o chr.img.zip \
             https://github.com/elseif/MikroTikPatch/releases/download/${{ steps.get_release.outputs.version }}/chr-${{ steps.get_release.outputs.version }}.img.zip
@@ -117,46 +122,4 @@ jobs:
           echo n     # 不设置可启动标志？(Y/N)
           echo n     # 未使用的分区空间保护更多分区？(Y/N)
           echo w     # 写入更改
-          echo y     # 确认
-          ) | sudo gdisk /dev/nbd1
-
-      - name: Disconnect nbd
-        run: |
-          sudo qemu-nbd -d /dev/nbd0
-          sudo qemu-nbd -d /dev/nbd1
-
-      - name: Remove old image
-        run: rm -f chr.qcow2
-
-      - name: Convert images
-        run: |
-          mkdir -p Firmware/
-          cp -f chr-efi.qcow2 Firmware/
-          qemu-img convert -f qcow2 -O vmdk chr-efi.qcow2 Firmware/chr-efi.vmdk
-          qemu-img convert -f qcow2 -O vpc chr-efi.qcow2 Firmware/chr-efi.vhd
-          qemu-img convert -f qcow2 -O vhdx chr-efi.qcow2 Firmware/chr-efi.vhdx
-          qemu-img convert -f qcow2 -O vdi chr-efi.qcow2 Firmware/chr-efi.vdi
-          qemu-img convert -f qcow2 -O raw chr-efi.qcow2 Firmware/chr-efi.img
-          ls -l Firmware/
-
-      - name: Zip images
-        run: |
-          cd Firmware/
-          zip chr-${{ steps.get_release.outputs.version }}.qcow2.zip chr-efi.qcow2
-          zip chr-${{ steps.get_release.outputs.version }}.vmdk.zip chr-efi.vmdk
-          zip chr-${{ steps.get_release.outputs.version }}.vhd.zip chr-efi.vhd
-          zip chr-${{ steps.get_release.outputs.version }}.vhdx.zip chr-efi.vhdx
-          zip chr-${{ steps.get_release.outputs.version }}.vdi.zip chr-efi.vdi
-          zip chr-${{ steps.get_release.outputs.version }}.img.zip chr-efi.img
-          ls -l .
-
-      - name: Upload Firmware to release
-        uses: ncipollo/release-action@v1
-        with:
-          name: ${{ steps.get_release.outputs.version }}_GPT
-          allowUpdates: true
-          removeArtifacts: true
-          tag: ${{ steps.get_release.outputs.version }}_GPT
-          commit: master
-          token: ${{ secrets.PERSONAL_TOKEN }}
-          artifacts: Firmware/*.zip
+          echo y 
