--- a/.github/workflows/build_gpt.yml
+++ b/.github/workflows/build_gpt.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    name: Build ${{ steps.get_release.outputs.version }}
+    name: Build 
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id || !github.event.sender.id
 
