--- a/.github/workflows/clear.yml
+++ b/.github/workflows/clear.yml
@@ -1,8 +1,20 @@
-- name: Clear latest_version.txt
-  run: |
-    echo "" > latest_version.txt
-    git config user.name "github-actions"
-    git config user.email "github-actions@github.com"
-    git add latest_version.txt
-    git commit -m "Clear latest_version.txt" || echo "No changes to commit"
-    git push origin HEAD:master
+name: Clear Latest Version
+
+on:
+  workflow_dispatch:
+
+jobs:
+  clear_latest_version:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Clear latest_version.txt and commit changes
+        run: |
+          echo "" > latest_version.txt
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add latest_version.txt
+          git commit -m "Clear latest_version.txt" || echo "No changes to commit"
+          git push origin HEAD:master
